unpackaged/objects/CAMS_Note__c.object
<CustomObject>
    <fields>
        <fullName>CAMS_Assignment__c</fullName>
        <label>Assignment</label>
        <referenceTo>CAMS_Assignment__c</referenceTo>
        <relationshipLabel>CAMS Notes</relationshipLabel>
        <relationshipName>CAMS_Notes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CAMS_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task</label>
        <referenceTo>CAMS_Task__c</referenceTo>
        <relationshipLabel>CAMS Notes</relationshipLabel>
        <relationshipName>CAMS_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Test_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Uploaded_To__c</fullName>
        <label>Uploaded To</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>CAMS Note</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CAMS Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>